test/invalid/MissingColonInField/MissingColonInField.plume
/**
 * @author Robin Burgess 36815
 */
 class IncompleteField extends Object is
	field red Float